--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -2,11 +2,11 @@
 	margin-top: 10%;
 	height: 50%;
 	width: 70%;
-	border-radius: 10px;
+	border-radius: 8px;
 }
 
 .card {
-	background-color: aqua;
+	background-color: #d4d3d1;
 	border-radius: 10px;
 	padding-bottom: 3%;
 	margin-bottom: 10%;
