--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -27,9 +27,43 @@
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
-	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+@media (min-width: 1000px) {
+	.modal {
+		position: fixed;
+		top: 0;
+		left: 0;
+		padding: 20%;
+		margin-top: 0%;
+		margin-bottom: 10%;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
+
+@media (max-height: 500px) {
+	.modal {
+		position: fixed;
+		top: 0;
+		left: 0;
+		padding: 20%;
+		padding-bottom: 15%;
+		margin-top: 0%;
+		margin-bottom: 10%;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
 }
 
 .closeButton {
