--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,5 +1,5 @@
 .cardImg {
-	margin-top: 10%;
+	margin-top: 2rem;
 	height: 50%;
 	width: 70%;
 	border-radius: 8px;
@@ -8,8 +8,8 @@
 .card {
 	background-color: #d4d3d1;
 	border-radius: 10px;
-	padding-bottom: 3%;
-	margin-bottom: 10%;
+	padding-bottom: 2rem;
+	margin-bottom: 2rem;
 }
 
 .star {
