--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -1,5 +1,5 @@
 .cardImg {
-	margin-top: 1%;
+	margin-top: 1rem;
 	height: 20%;
 	width: 20%;
 	border-radius: 8px;
@@ -8,13 +8,13 @@
 .card {
 	background-color: #d4d3d1;
 	border-radius: 10px;
-	padding-bottom: 3%;
+	padding-bottom: 1rem;
 	margin-bottom: 10%;
 }
 
 .star {
-	width: 2%;
-	height: 2%;
+	width: 3%;
+	height: 3%;
 }
 
 .modal {
@@ -29,6 +29,7 @@
 	background-color: rgba(0, 0, 0, 0.5);
 	justify-content: center;
 	align-items: center;
+	z-index: 10000000000;
 }
 
 @media (min-width: 1000px) {
@@ -45,6 +46,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		z-index: 10000000000;
 	}
 }
 
@@ -63,6 +65,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		z-index: 10000000000;
 	}
 }
 
