--- a/src/components/Details/Details.module.css
+++ b/src/components/Details/Details.module.css
@@ -26,6 +26,7 @@
 	margin-bottom: 10%;
 	width: 100%;
 	height: 100%;
+	background-color: rgba(122, 120, 120, 0.5);
 	justify-content: center;
 	align-items: center;
 	z-index: 10000000000;
@@ -41,6 +42,7 @@
 		margin-bottom: 10%;
 		width: 100%;
 		height: 100%;
+		background-color: rgba(122, 120, 120, 0.5);
 		display: flex;
 		justify-content: center;
 		align-items: center;
