--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,20 +1,10 @@
-.cardImg {
-	margin-top: 1rem;
-	height: 20%;
-	width: 20%;
-	border-radius: 8px;
-}
-
 .card {
 	background-color: #d4d3d1;
 	border-radius: 10px;
 	padding-bottom: 1rem;
 	margin-bottom: 10%;
-}
-
-.star {
-	width: 3%;
-	height: 3%;
+	padding-left: 1rem;
+	padding-right: 1rem;
 }
 
 .modal {
@@ -26,9 +16,10 @@
 	margin-bottom: 10%;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(122, 120, 120, 0.05);
+	background-color: rgba(122, 120, 120, 0.5);
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
+	overflow: auto;
 	z-index: 10000000000;
 }
 
@@ -42,10 +33,11 @@
 		margin-bottom: 10%;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(122, 120, 120, 0.05);
+		background-color: rgba(122, 120, 120, 0.5);
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		overflow: auto;
 		z-index: 10000000000;
 	}
 }
@@ -61,10 +53,11 @@
 		margin-bottom: 10%;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(122, 120, 120, 0.05);
+		background-color: rgba(122, 120, 120, 0.5);
 		display: flex;
 		justify-content: center;
-		align-items: center;
+		align-items: flex-start;
+		overflow: auto;
 		z-index: 10000000000;
 	}
 }
@@ -77,6 +70,21 @@
 	line-height: 25px;
 	text-align: center;
 	margin: 10px;
+	border-radius: 15px;
+	background-color: #f5f5f5;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+	cursor: pointer;
+	font-size: 1.5rem;
+}
+
+.button {
+	position: relative;
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	line-height: 25px;
+	text-align: center;
+	margin: 5px;
 	border-radius: 15px;
 	background-color: #f5f5f5;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
