--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -77,6 +77,10 @@
 	font-size: 1.5rem;
 }
 
+.closeButton:hover {
+	background-color: grey;
+}
+
 .button {
 	position: relative;
 	display: inline-block;
@@ -90,4 +94,70 @@
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	cursor: pointer;
 	font-size: 1.5rem;
+}
+
+.button:hover {
+	background-color: grey;
+}
+
+.cartButton {
+	padding: 0.5rem;
+	border-radius: 5px;
+	border-width: 1px;
+	background-color: #d4d3d1;
+	color: black;
+}
+
+.cartButton:hover {
+	padding: 0.5rem;
+	border-radius: 5px;
+	border-width: 1px;
+	background-color: grey;
+	color: white;
+}
+
+@media screen and (max-width: 700px) {
+	.modal h3 {
+		font-size: 20px;
+	}
+	.modal h2 {
+		font-size: 25px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.modal h3 {
+		font-size: 18px;
+	}
+	.modal h2 {
+		font-size: 23px;
+	}
+	.button {
+		width: 18px;
+		height: 18px;
+		line-height: 12px;
+	}
+
+	.button:hover {
+		background-color: grey;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.modal h3 {
+		font-size: 15px;
+	}
+	.modal h2 {
+		font-size: 20px;
+	}
+
+	.button {
+		width: 18px;
+		height: 18px;
+		line-height: 12px;
+	}
+
+	.button:hover {
+		background-color: grey;
+	}
 }
